--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-uuid": "^1.0.2",
+    "validator": "^13.5.2",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
