--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.0",
     "react-uuid": "^1.0.2",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.5.2",
     "web-vitals": "^1.0.1"
   },
