--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-slick": "^0.28.0",
     "react-uuid": "^1.0.2",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^5.2.1",
     "validator": "^13.5.2",
     "web-vitals": "^1.0.1"
   },
