--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-slick": "^0.28.0",
+    "react-switch": "^6.0.0",
     "react-uuid": "^1.0.2",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.2.1",
